--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mongoose": "^5.9.7",
     "morgan": "^1.10.0",
     "nodemailer": "^6.4.6",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "stripe": "^8.39.2"
   }
 }
