--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=test mocha --timeout 10000 -r dotenv/config ./test/**/*.test.js",
+    "test": "NODE_ENV=test mocha --timeout 10000 ./test/**/*.test.js -r dotenv/config",
     "start": "node app.js",
     "develop": "nodemon -r dotenv/config app.js"
   },
