--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "NODE_ENV=test mocha --timeout 10000 ./test/**/*.test.js -r dotenv/config",
     "start": "node app.js",
-    "develop": "nodemon -r dotenv/config app.js"
+    "develop": "NODE_ENV=development nodemon -r dotenv/config app.js"
   },
   "repository": {
     "type": "git",
