--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "firebase-admin": "^8.12.1",
     "helmet": "^3.22.0",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^7.1.2",
