--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "NODE_ENV=test mocha --timeout 10000 ./test/**/*.test.js -r dotenv/config",
+    "test-dev": "NODE_ENV=development mocha --timeout 10000 ./test/**/*.test.js -r dotenv/config",
     "start": "node app.js",
     "develop": "NODE_ENV=development nodemon -r dotenv/config app.js"
   },
