--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=test mocha --timeout 10000 ./test/**/*.test.js -r dotenv/config",
-    "test-dev": "NODE_ENV=development mocha --timeout 10000 ./test/**/*.test.js -r dotenv/config",
+    "test": "NODE_ENV=test mocha --timeout 10000 './test/**/*.test.js' -r dotenv/config",
+    "test-dev": "NODE_ENV=development mocha --timeout 10000 './test/**/*.test.js'  -r dotenv/config",
     "start": "node app.js",
     "develop": "NODE_ENV=development nodemon -r dotenv/config app.js"
   },
