--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "start": "node app.js",
     "dev": "NODE_ENV=development nodemon -r dotenv/config app.js",
     "int": "NODE_ENV=production nodemon -r dotenv/config app.js",
-    "test": "NODE_ENV=test mocha --timeout 10000 './test/**/*.test.js' -r dotenv/config",
-    "test-dev": "NODE_ENV=development mocha --timeout 10000 './test/**/*.test.js'  -r dotenv/config",
-    "test-int": "NODE_ENV=production mocha --timeout 10000 './test/**/*.test.js'  -r dotenv/config"
+    "test": "NODE_ENV=test mocha --timeout 10000 './test/**/*.test.js' -r dotenv/config"
   },
   "repository": {
     "type": "git",
