--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node app.js",
     "dev": "NODE_ENV=development nodemon -r dotenv/config app.js",
     "int": "NODE_ENV=production nodemon -r dotenv/config app.js",
-    "test": "NODE_ENV=test mocha --timeout 10000 './test/**/*.test.js' -r dotenv/config"
+    "test": "NODE_ENV=test mocha --timeout 10000 './test/**/*.test.js' -r dotenv/config",
+    "test-int": "NODE_ENV=production mocha --timeout 10000 './test/**/*.test.js' -r dotenv/config"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
   },
   "homepage": "https://github.com/runranron/delivery-app.api#readme",
   "dependencies": {
+    "@sendgrid/mail": "^7.1.1",
     "axios": "^0.19.2",
     "bcrypt": "^4.0.1",
     "chai": "^4.2.0",
